Fixed content provider iterator and changed readme.md

--- a/dont-feed-the-dark.html
+++ b/dont-feed-the-dark.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.16.1/vis.css" type="text/css" />
